--- a/index.html
+++ b/index.html
@@ -7,19 +7,32 @@
     <title>Tim Berners-Lee</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
-    <center>
-        <ul class="menu">
-            <li class="links"><a href="#bio">Home</a></li>
-            <li class="links"><a href="#myvideos">My Videos</a></li>
-            <li class="links"><a href="#mywork">Work</a></li>
-            <li class="links"><a href="#mywritings">Writings</a></li>
-            <li class="links"><a href="#contacts">Contact</a></li>
-        </ul>
-    </center>
+    <nav class="navbar-inverse my_navbar">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#mynavbar">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="https://nikhilwhitehatjr.github.io/Personal-Website/">Nikhil Ronanki</a>
+        </div>
+        <div class="collapse navbar-collapse" id="mynavbar">
+            <ul class="nav navbar-nav">
+                <li class="links"><a href="#bio">Home</a></li>
+                <li class="links"><a href="#myvideos">My Videos</a></li>
+                <li class="links"><a href="#mywork">Work</a></li>
+                <li class="links"><a href="#mywritings">Writings</a></li>
+                <li class="links"><a href="#contacts">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
     <section id="welcome" class="welcome">
         <div class="inner"><img src="Sir_Tim_Berners-Lee.jpg" class="timbernerslee">
             <h1>I am<br /><span id="name">Sir Tim Berners-Lee</span></h1>
@@ -60,10 +73,15 @@
         <h1>Contacts</h1>
         <div class="line"></div>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3769.588348679755!2d72.88846041531366!3d19.125706755377234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c97f346053b7%3A0xacf72f56793d190a!2sWhitehat%20Education%20Technology%20Pvt.%20Ltd.!5e0!3m2!1sen!2sin!4v1605006653530!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-        <div class="contact_1">
+        <div class="contact_1 col-lg-6 col-md-6 col-sm-6 col-xs-12">
             <a href="mailto:nikhilmsghaly@gmail.com?Subject=Hello"><i class="fa fa-envelope"></i>&nbsp;&nbsp;<h3>nikhilmsghaly@gmail.com</h3></a>
         </div>
+        <div class="contact_2 col-lg-6 col-md-6 col-sm-6 col-xs-12">
+        <form>
+            <span>Name: </span>&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="name" required> <br><br>
+            <span>Comment: </span>&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="comment" required> <br><br>
+            <input type="submit" value="submit" class="btn btn-success">
+            </form>
+        </div>
     </section>
-</body>
-
-</html>
+</body></html>
